src/test/ui/moves/moves-based-on-type-access-to-field.stderr
error[E0382]: borrow of moved value: `x`
  --> $DIR/moves-based-on-type-access-to-field.rs:11:12
   |
LL |     let x = vec!["hi".to_string()];
   |         - move occurs because `x` has type `Vec<String>`, which does not implement the `Copy` trait
LL |     consume(x.into_iter().next().unwrap());
   |               ----------- `x` moved due to this method call
LL |     touch(&x[0]);
   |            ^ value borrowed here after move
   |
note: this function takes ownership of the receiver `self`, which moves `x`
  --> $SRC_DIR/core/src/iter/traits/collect.rs:LL:COL
   |
LL |     fn into_iter(self) -> Self::IntoIter;
   |                  ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
